# universal-config-converter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  config.json  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
config_converter/: converter.py  main.py
tests/: test_converter.py
tests/schemas/: invalid_schema.json  valid_schema.json
